# tauri-workflow

./: .env  .env.example  .eslintrc.js  .gitignore  .prettierrc.json  components.json  index.html  move-bin.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
db_oxplus/: index.js  package.json  pnpm-lock.yaml
db_oxplus/src/: server.js
scripts/: generate-icon-map.js
src/: main.tsx  routeTree.gen.ts  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: core.json  deep-link.json  default.txt  dialog.json  fs.json  http.json  oauth.json  shell.json  sql.txt  store.json
src-tauri/resources/theme/: default.css
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: cmd.rs  cripto.rs  mod.rs
src/api/: CustomFetch.ts  ParthyAuthentication.ts  stdCustRefDataMgt.tsx
src/atom/: globals.ts  initial-values.ts  store-table.ts
src/auth/: authConfig.ts  callMsGraph.ts  claimUtils.ts  oauth.ts
src/components/: ContentApp.tsx  NavApp.tsx  comp-529.tsx
src/config/: theme.ts
src/contexts/: settingsContext.tsx
src/data/: Sidebar.ts  ThemeMode.ts  theme-presets.json
src/functions/: dni.ts  fs.ts  global.ts  theme.ts
src/hooks/: useAuth.ts  useLogout.ts  usePageInfo.ts  useSettings.tsx
src/lib/: utils.ts
src/providers/: ThemesProvider.tsx
src/routes/: __root.tsx  auth-success.tsx  dashboard.tsx  index.tsx  logout.tsx  settings.tsx  theme.tsx
src/styles/: clerk-theme.css  custom.style.ts  fonts-mono.css  fonts-sans.css  fonts-serif.css  global.css
(+205 files in other folders)
