[package]
name = "vyc-credicts"
version = "0.1.0"
description = "Application for managing visa approvals and processing credit applications, streamlining the review, validation, and decision-making workflows."
authors = ["cardosomartin33@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vyc_credicts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2", features = [ "devtools", "protocol-asset", "unstable", ] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-store = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers", "dangerous-settings"] }
tauri-plugin-opener = "2"
tauri-plugin-oauth = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = {version = "2", features = ["deep-link"] }
aes-gcm="0.10.3"
hex="0.4.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
